--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 			</p>
 		  </section>
 	</div>
-
+<div>
 		<section id="comments">
 			<h2>Ahora crea tu propio final o continua el nuestro</h2>
 			<h2>Comentarios</h2>
@@ -354,6 +354,7 @@
 
 				 <button type="submit">Subir comentario</button>
 			</form>
+		</div>
         <div>
 <p> Para mejorar la experiencia, accede a alguna de las siguientes páginas
 </p>
