--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
 				 <button type="submit">Subir comentario</button>
 			</form>
 		</div>
+	</section>
         <div>
 <p> Para mejorar la experiencia, accede a alguna de las siguientes páginas
 </p>
@@ -365,15 +366,12 @@
 <p>Cuando accedas a la página realiza una descripción en inglés de tu final o continuación de la historia, copia este texto -> Colored Pencil, Editorial Photography, Agfacolor, 2-Dimensional, Ultra-HD, Ray Tracing Global Illumination, RTX  y luego pegalo en la página que hayas accedido y verás 
 	una imagén que complemente tu historia
 </p>
+</div>
 
-		</div>
-			<div id="comments-list">
-				 <h3>Comentarios anteriores:</h3>
-				 <ul>
-					 <!-- Comment items will be added dynamically using JavaScript -->
-				 </ul>
-			</div>
-		</section>
+
+<section id="comments-list">
+	<!-- Comments will be dynamically generated here -->
+  </section>
   
 	</main>
 
